--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,13 @@
     "def factorial(n):\n",
     "    pro = 1\n",
     "    while pro >= n:\n",
-    "        return (n * (n -1))"
+    "        return (n * (n -1))\n",
+    "    def factorial(n):\n",
+    "    prod = 1\n",
+    "    while n >= 1:\n",
+    "        prod = prod * n\n",
+    "        n = n - 1\n",
+    "    return prod"
    ]
   },
   {
