Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
    "source": [
     "def factorial(n):\n",
     "    pro = 1\n",
-    "    while pro >= n:\n",
+    "    while n >= :\n",
     "        return (n * (n -1))\n",
     "    def factorial(n):\n",
     "    prod = 1\n",
