--- a/index.ipynb
+++ b/index.ipynb
@@ -102,20 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def factorial(n):\n",
     "    pro = 1\n",
-    "    while n >= :\n",
-    "        return (n * (n -1))\n",
-    "    def factorial(n):\n",
-    "    prod = 1\n",
     "    while n >= 1:\n",
-    "        prod = prod * n\n",
-    "        n = n - 1\n",
-    "    return prod"
+    "        return (n * (n -1))\n",
+    "#     def factorial(n):\n",
+    "#     prod = 1\n",
+    "#     while n >= 1:\n",
+    "#         prod = prod * n\n",
+    "#         n = n - 1\n",
+    "#     return prod"
    ]
   },
   {
@@ -127,9 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "380"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "factorial(20)"
    ]
