--- a/index.ipynb
+++ b/index.ipynb
@@ -109,6 +109,7 @@
     "def factorial(n):\n",
     "    pro = 1\n",
     "    while n >= 1:\n",
+    "        pro \n",
     "        return (n * (n -1))\n",
     "#     def factorial(n):\n",
     "#     prod = 1\n",
