Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,8 +110,8 @@
     "    pro = 1\n",
     "    while n >= 1:\n",
     "        pro *= n\n",
-    "        \n",
-    "        return (n * (n -1))\n",
+    "        n -= 1\n",
+    "        return prof\n",
     "#     def factorial(n):\n",
     "#     prod = 1\n",
     "#     while n >= 1:\n",
